--- a/project/style.css
+++ b/project/style.css
@@ -305,7 +305,70 @@ select,
     margin-bottom: 10px;
 }
 
+#detail-view-inner{
+    display: flex;
+    flex-direction: column;
+}
 
+#detail-view {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.8);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+
+.detail-content {
+    background: var(--background-light-dark);
+    color: var(--text-light);
+    border-radius: 10px;
+    padding: 20px;
+    display: flex;
+    gap: 20px;
+    max-width: 800px;
+    width: 90%;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
+    position: relative;
+}
+
+.detail-left img {
+    max-width: 500px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+}
+
+.detail-right {
+    display: flex;
+    flex-direction: column;
+}
+
+#close-detail-view {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background: var(--text-logo-color);
+    color: var(--text-light);
+    border: none;
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    font-size: 18px;
+    font-weight: bold;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+}
+
+#close-detail-view:hover {
+    background: var(--text-logo-light-color);
+}
 
 @media (max-width: 1300px) {
     #auto-container {
