favoriten, login und javascript für beide implementiert. Noch nicht fertig.

--- a/project/style.css
+++ b/project/style.css
@@ -515,3 +515,36 @@ select,
     padding: 10px;
     border-radius: 15px;
 }
+
+/* ========= Info Seite ========= */
+
+
+.about-section {
+    background: var(--background-light-dark);
+    color: var(--text-light);
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+    margin: 20px auto;
+    max-width: 800px;
+    line-height: 1.6;
+}
+
+.about-section h2 {
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 10px;
+    color: var(--text-logo-color);
+}
+
+.about-section p {
+    margin-bottom: 15px;
+}
+
+.footer {
+    background: var(--background-dark);
+    color: var(--text-light);
+    text-align: center;
+    padding: 10px 0;
+    border-top: 2px solid var(--text-offwhite);
+}
