--- a/project/style.css
+++ b/project/style.css
@@ -22,6 +22,10 @@
     --overlay-background: rgba(145, 145, 145, 0.5);
 }
 
+a {
+    all: unset;
+  }
+
 /* ========= Login Styles ========= */
 
 .login-container {
@@ -118,17 +122,15 @@ header {
     background-color: var(--text-logo-color);
     border-radius: 5px;
     padding: 1px;
-    color: var(--background-light-dark);
+    color: var(--background-light-);
 }
 
 #logo {
     font-size: 25px;
     font-weight: bold;
     display: flex;
-    margin-left: 20%;
     cursor: pointer;
     transition: 0.5s ease;
-
 }
 
 #logo:hover {
@@ -290,24 +292,6 @@ select,
     padding: 20px;
 }
 
-.last-search,
-.sell-car {
-    background: var(--text-light);
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
-    width: 40%;
-}
-
-.sell-btn {
-    background: var(--background-darker);
-    color: var(--text-light);
-    padding: 10px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-}
-
 #auto-container {
     display: flex;
     flex-wrap: wrap;
@@ -316,6 +300,7 @@ select,
     padding: 20px;
     width: 80%;
     margin: auto;
+    color: var(--text-light);
 }
 
 .auto-box {
@@ -371,6 +356,7 @@ select,
     justify-content: center;
     align-items: center;
     z-index: 1000;
+    margin: auto;
 }
 
 .detail-content {
@@ -379,7 +365,6 @@ select,
     border-radius: 10px;
     padding: 20px;
     display: flex;
-    gap: 20px;
     max-width: 800px;
     width: 90%;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
@@ -388,6 +373,7 @@ select,
 
 .detail-left {
     display: flex;
+    gap: 10px;
     flex-direction: column;
     max-width: 600px;
 }
@@ -469,6 +455,12 @@ select,
 }
 
 @media (max-width: 768px) {
+
+
+    #logo {
+        margin: auto;
+    }
+
     #auto-container {
         flex-direction: column;
         align-items: center;
@@ -491,15 +483,41 @@ select,
         flex-direction: column;
     }
 
-    #logo {
-        margin: auto;
-    }
-
     #dropDown {
         display: block;
     }
 
+    .detail-content {
+        font-size: 13px;
+        flex-direction: column;
+        max-width: 80%;
+        height: auto;
+        overflow-y: auto;
+        padding: 15px;
+    }
 
+    .detail-left img {
+        max-width: 100%;
+        height: auto;
+    }
+
+    .detail-right {
+        display: grid;
+        grid-template-columns: auto auto;
+        gap: 10px;
+        text-align: center;
+    }
+
+    .detail-right p {
+        margin: 5px 0;
+    }
+
+    #close-detail-view {
+        top: 5px;
+        right: 5px;
+        width: 40px;
+        height: 40px;
+    }
 }
 .nav-rechts.active {
     display: grid;
