--- a/project/style.css
+++ b/project/style.css
@@ -148,6 +148,7 @@ header {
     gap: 15px;
     margin-right: 20%;
     transition: 0.5s ease;
+    cursor: pointer;
 }
 
 .nav-rechts a {
@@ -243,8 +244,8 @@ header {
 }
 
 .filters {
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: auto auto auto auto auto;
     gap: 15px;
     padding: 15px;
     border-radius: 10px;
@@ -270,6 +271,29 @@ header {
 .filters select:focus {
     box-shadow: 0 0 5px rgba(0, 123, 255, 0.3);
     outline: none;
+}
+
+.filters input {
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 6px;
+    font-size: 16px;
+    background: var(--text-offwhite);
+    color: var(--background-light-dark);
+    cursor: pointer;
+    transition: all 0.3s ease;
+    width: auto;
+    min-width: 150px;
+}
+
+.filters input:hover,
+.filters input:focus {
+    box-shadow: 0 0 5px rgba(0, 123, 255, 0.3);
+    outline: none;
+}
+
+/* Add specific styles for the Treibstoff dropdown if needed */
+#treibstoff-filter {
 }
 
 /* ========= Bottom Section ========= */
@@ -436,6 +460,12 @@ select,
 }
 
 @media (max-width: 1300px) {
+
+    .filters {
+        grid-template-columns: auto auto auto auto;
+    
+    }
+
     #auto-container {
         display: flex;
         flex-wrap: wrap;
@@ -450,6 +480,8 @@ select,
         margin-right: 3%;
     }
 
+
+    
     #logo {
         margin-left: 0%;
     }
